k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    project: second-project-devops
